--- a/board/board/src/main/resources/templates/IdPage.html
+++ b/board/board/src/main/resources/templates/IdPage.html
@@ -7,12 +7,18 @@
 <body>
 <h1 th:text="${board.title}"></h1>
 <p th:text="${board.content}"></p>
-<p>작성 시간: <span th:text="${#dates.format(board.createTime, 'yyyy-MM-dd HH:mm')}"></span></p>
+<p>작성 시간: <span th:text="${#temporals.format(board.createTime, 'yyyy-MM-dd HH:mm')}"></span></p>
 
-<a th:href="@{/update/${board.id}}">수정</a>
-<form th:action="@{/delete/${board.id}}" method="post" style="display:inline;">
+<!-- 수정 버튼 -->
+<form th:action="@{'/update/'+${board.id}}" method="get" style="display:inline;">
+    <button type="submit">수정</button>
+</form>
+
+<!-- 삭제 버튼 -->
+<form th:action="@{'/delete/'+${board.id}}" method="post" style="display:inline;" onsubmit="return confirm('삭제하시겠습니까?');">
     <button type="submit">삭제</button>
 </form>
+
 <a href="/">목록으로 돌아가기</a>
 </body>
 </html>
