--- a/board/board/src/main/resources/templates/Index.html
+++ b/board/board/src/main/resources/templates/Index.html
@@ -11,20 +11,26 @@
         <th>내용</th>
         <th>작성일</th>
     </tr>
-    <tr th:each="board : ${boardPage}">
+    <tr th:each="board : ${boardPage.content}">
         <td><a th:href="@{/boards/{id}(id=${board.id})}" th:text="${board.title}">글 제목</a></td>
         <td th:text="${board.content}">글 내용</td>
         <td th:text="${board.createTime}">생성 시간</td>
     </tr>
 </table>
-<div>
-        <span th:if="${boardPage.hasPrevious()}">
-            <a th:href="@{/${boardPage.number - 1}(page=${boardPage.number - 1})}">이전</a>
-        </span>
-    <span th:if="${boardPage.hasNext()}">
-            <a th:href="@{/${boardPage.number + 1}(page=${boardPage.number + 1})}">다음</a>
-        </span>
-</div>
 
+<div>
+    <span th:if="${boardPage.hasPrevious()}">
+        <a th:href="@{/}(page=${boardPage.number - 1})">이전</a>
+    </span>
+
+    <span th:if="${boardPage.hasNext()}">
+        <a th:href="@{/}(page=${boardPage.number + 1})">다음</a>
+    </span>
+</div>
+<div>
+    <a th:href="@{/create}">
+        <button>글작성</button>
+    </a>
+</div>
 </body>
 </html>
