fix : DTO추가 및 html 수정 refactor: Controller 수정

--- a/board/board/src/main/resources/templates/UpdatePage.html
+++ b/board/board/src/main/resources/templates/UpdatePage.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>게시글 수정</h1>
-<form th:action="@{'/update/'+${board.id}}" method="post" th:object="${board}">
+<form th:action="@{'/update/'+${board.id}}" role="form" method="post" th:object="${board}">
     <label for="title">제목:</label>
     <input type="text" id="title" name="title" th:field="*{title}" required/><br/>
 
