--- a/board/board/src/main/resources/templates/IdPage.html
+++ b/board/board/src/main/resources/templates/IdPage.html
@@ -8,7 +8,7 @@
 <h1 th:text="${board.title}"></h1>
 <p th:text="${board.content}"></p>
 <p>작성 시간: <span th:text="${#temporals.format(board.createTime, 'yyyy-MM-dd HH:mm')}"></span></p>
-
+<p>수정 시간: <span th:text="${#temporals.format(board.updateTime, 'yyyy-MM-dd HH:mm')}"></span></p>
 <!-- 수정 버튼 -->
 <form th:action="@{'/update/'+${board.id}}" method="get" style="display:inline;">
     <button type="submit">수정</button>
