--- a/board/board/src/main/resources/templates/Index.html
+++ b/board/board/src/main/resources/templates/Index.html
@@ -11,26 +11,44 @@
         <th>내용</th>
         <th>작성일</th>
     </tr>
-    <tr th:each="board : ${boardPage.content}">
+    <tr th:each="board : ${paging.content}">
         <td><a th:href="@{/boards/{id}(id=${board.id})}" th:text="${board.title}">글 제목</a></td>
         <td th:text="${board.content}">글 내용</td>
-        <td th:text="${board.createTime}">생성 시간</td>
+        <td th:text="${#temporals.format(board.createTime, 'yyyy-MM-dd HH:mm')}">생성 시간</td>
     </tr>
 </table>
 
-<div>
-    <span th:if="${boardPage.hasPrevious()}">
-        <a th:href="@{/}(page=${boardPage.number - 1})">이전</a>
-    </span>
-
-    <span th:if="${boardPage.hasNext()}">
-        <a th:href="@{/}(page=${boardPage.number + 1})">다음</a>
-    </span>
+(... 생략 ...)
+<!-- 페이징처리 시작 -->
+<div th:if="${!paging.isEmpty()}">
+    <ul>
+        <li th:classappend="${!paging.hasPrevious} ? 'disabled'">
+            <a
+                    th:href="@{|?page=${paging.number-1}|}">
+                <span>이전</span>
+            </a>
+        </li>
+        <li th:classappend="${page == paging.number} ? 'active'"
+            th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+            th:if="${page >= paging.number-5 and page <= paging.number+5}"
+        >
+            <a class="page-link" th:href="@{|?page=${page}|}" th:text="${page}"></a>
+        </li>
+        <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+            <a th:href="@{|?page=${paging.number+1}|}">
+                <span>다음</span>
+            </a>
+        </li>
+    </ul>
 </div>
-<div>
-    <a th:href="@{/create}">
-        <button>글작성</button>
-    </a>
+<!-- 페이징처리 끝 -->
+<a class="btn btn-primary" th:href="@{/question/create}">질문 등록하기</a>
+</div>
+</html>
+
+<a th:href="@{/create}">
+    <button>글작성</button>
+</a>
 </div>
 </body>
 </html>
