--- a/board/board/src/main/resources/templates/Index.html
+++ b/board/board/src/main/resources/templates/Index.html
@@ -18,22 +18,22 @@
     </tr>
 </table>
 
-(... 생략 ...)
 <!-- 페이징처리 시작 -->
 <div th:if="${!paging.isEmpty()}">
     <ul>
-        <li th:classappend="${!paging.hasPrevious} ? 'disabled'">
-            <a
-                    th:href="@{|?page=${paging.number-1}|}">
+        <li th:if="${paging.number > 0}" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+            <a th:href="@{|?page=${paging.number-1}|}">
                 <span>이전</span>
             </a>
         </li>
+
         <li th:classappend="${page == paging.number} ? 'active'"
             th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
-            th:if="${page >= paging.number-5 and page <= paging.number+5}"
+            th:if="${page >= paging.number-5 and page <= paging.number+4}"
         >
             <a class="page-link" th:href="@{|?page=${page}|}" th:text="${page}"></a>
         </li>
+
         <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
             <a th:href="@{|?page=${paging.number+1}|}">
                 <span>다음</span>
@@ -42,13 +42,8 @@
     </ul>
 </div>
 <!-- 페이징처리 끝 -->
-<a class="btn btn-primary" th:href="@{/question/create}">질문 등록하기</a>
-</div>
-</html>
-
 <a th:href="@{/create}">
     <button>글작성</button>
 </a>
-</div>
 </body>
 </html>
