--- a/board/board/src/main/resources/templates/CreatePage.html
+++ b/board/board/src/main/resources/templates/CreatePage.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- thymeleaf를 사용하기 위해 사용한다. -->
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -6,11 +7,13 @@
 </head>
 <body>
 <h1>게시글 작성</h1>
+    <!-- ${boardRequestDTO}은 BoardController에서 model을 통해 받은 값이다. -->
 <form th:action="@{/create}" method="post" role="form" th:object="${boardRequestDTO}">
     <label for="title">제목:</label>
+    <!-- *{title}은 BoardRequest의 title이다. -->
     <input type="text" id="title" th:field="*{title}"/><br/>
-
     <label for="content">내용:</label><br/>
+    <!-- *{content}은 BoardRequest의 content이다. -->
     <textarea id="content" th:field="*{content}" ></textarea><br/>
 
     <button type="submit">작성</button>
